--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
 
 [project.urls]
 homepage = "https://github.com/rly0nheart/searchcode-cli"
-documentation = "https://github.com/rly0nheart/searchcode-cli/blob/master/README.md"
+documentation = "https://github.com/rly0nheart/searchcode-cli/wiki"
 repository = "https://github.com/rly0nheart/searchcode-cli.git"
 
 [project.scripts]
