--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "searchcode-cli"
-version = "1.3.1"
-description = "Command line client for Searchcode.com"
+version = "2.0.0"
+description = "A Python wrapper around the searchcode API"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 license = {file = "LICENSE"}
-keywords = ["searchcode", "search-engine", "codesearch", "searchcode-server"]
+keywords = ["searchcode", "search-engine", "codesearch", "api-wrapper"]
 authors = [{name = "Richard Mwewa", email = "rly0nheart@duck.com"}]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
@@ -21,15 +21,11 @@ classifiers = [
   ""
 ]
 
-dependencies = [
-  "rich",
-  "requests"
-]
+[tool.setuptools]
+packages = ["searchcode"]
 
 [project.urls]
-homepage = "https://github.com/rly0nheart/searchcode-cli"
+homepage = "https://github.com/rly0nheart/searchcode"
 documentation = "https://github.com/rly0nheart/searchcode-cli/wiki"
 repository = "https://github.com/rly0nheart/searchcode-cli.git"
 
-[project.scripts]
-searchcode = "searchcode.searchcode:searchcode"
