--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 packages = ["searchcode"]
 
 [project.urls]
-homepage = "https://github.com/rly0nheart/searchcode"
+homepage = "https://searchcode.com"
 documentation = "https://github.com/rly0nheart/searchcode-cli/wiki"
 repository = "https://github.com/rly0nheart/searchcode-cli.git"
 
